--- a/config/.env.production
+++ b/config/.env.production
@@ -6,45 +6,53 @@ VERSION = v1
 # 环境变量
 NODE_ENV = production
 
+DATABASE_URL="postgres://postgres:postgres@localhost:5432/shop_app"
+
 # 运行配置
-PORT = 3001
+PORT=3000
+
+# 数据库连接信息
+# DATABASE_URL = postgresql://localhost:27017/shop-app
+
 # 接口限速
 GLOBAL_API_MAX_LINK=999
 # 当前服务对应域名，不需要前缀
-QR_URL=https://
+QR_URL=http://192.168.3.2:3000
 
 # 注册中心类型，none、eureka、
 REGISTRATION_TYPE=none
 REGISTRATION_NAME=application-server
 
 # eureka配置
-EUREKA_ADDRESS=192.168.198.144
+EUREKA_ADDRESS=http://192.168.198.144
 EUREKA_PORT=10021
 EUREKA_USERNAME=develop
 EUREKA_PWD=develop
 
 # Redis配置
-REDIS_HOST = 127.0.0.1
-REDIS_PORT = 8011
-REDIS_PASSWORD = JCFkQYex4f
+REDIS_HOST = localhost
+REDIS_PORT = 6379
+REDIS_PASSWORD =
 REDIS_DB = 0
-REDIS_PREFIX = APPLICATION_
+REDIS_PREFIX =
 
 # MYSQL配置, MYSQL_CACHE_TIME=0时关闭查询结果的缓存
+# MYSQL_HOST=122.51.199.179
 MYSQL_HOST=localhost
-MYSQL_POST=3306
+MYSQL_PORT=3306
 MYSQL_USERNAME=root
-MYSQL_PASSWORD=lai19940309
+MYSQL_PASSWORD=123456
 MYSQL_DATABASE=nest_zero_to_one
 MYSQL_TYPE=mysql
-MYSQL_LOGGING=false
-MYSQL_MAXQUERY=2000
+MYSQL_LOGGING=true
+MYSQL_MAXQUERY=10
 MYSQL_CACHE_TIME=0
+MYSQL_SYNCHRONIZE=false
 
 # 默认短信配置（仅支持验证码）,TYPE=1阿里，2腾讯
 SMS_TYPE=1
 SMS_ID=
-SMS_KEY=】
+SMS_KEY=
 SMS_SIGN=
 SMS_CODE=
 
@@ -68,7 +76,7 @@ TEN_COS_SECRET_ID=
 TEN_COS_SECRET_KEY=
 TEN_COS_REGION=
 TEN_COS_BUCKET=
-TEN_COS_PATH=
+TEN_COS_PATH=open
 
 # 七牛存储配置
 QN_OS_ACCESS_KEY='your access key'
@@ -85,4 +93,7 @@ HTTP_MAX_CONTENT_LENGTH = 20000
 HTTP_CHANGE_ORIGIN = true
 HTTP_WITH_CREDENTIALS = false
 HTTP_BASEURL=http://192.168.0.183/api/v1.0
+
+# jwt配置
+JWT_SECRET=mysecret
 
