--- a/package.json
+++ b/package.json
@@ -116,5 +116,8 @@
       "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1",
       "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
     }
+  },
+  "volta": {
+    "node": "16.20.2"
   }
 }
