--- a/config/.env.development
+++ b/config/.env.development
@@ -6,7 +6,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres:postgres@localhost:5432/shop_app"
+DATABASE_URL="postgres://postgres:Postgres.123@www.wuqinglangzitao.cn:5432//shop_app"
 
 # 接口&应用版本
 VERSION=v1
@@ -36,9 +36,9 @@ EUREKA_USERNAME=develop
 EUREKA_PWD=develop
 
 # Redis配置
-REDIS_HOST = localhost
+REDIS_HOST = www.wuqinglangzitao.cn
 REDIS_PORT = 6379
-REDIS_PASSWORD =
+REDIS_PASSWORD = Redis.123
 REDIS_DB = 0
 REDIS_PREFIX =
 
