fix: 修改数据库 redis 密码

--- a/config/.env.development
+++ b/config/.env.development
@@ -6,7 +6,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres:Postgres.123@www.wuqinglangzitao.cn:5432//shop_app"
+DATABASE_URL="postgres://postgres:Postgres.123@www.wuqinglangzitao.cn:5432/shop_app"
 
 # 接口&应用版本
 VERSION=v1
